--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
             android:inputType="textPassword" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btn_IniciarSesion"
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:layout_marginStart="16dp"
