--- a/app/src/main/res/layout-v21/dashboard_activity.xml
+++ b/app/src/main/res/layout-v21/dashboard_activity.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+   >
     <LinearLayout
         android:id="@+id/lny_ContenedorPrincipal"
         android:layout_width="match_parent"
@@ -15,8 +16,8 @@
     <RelativeLayout
         android:id="@+id/rly_ContenedorSecundario"
         android:layout_marginTop="15dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -46,6 +47,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <TextView
+            android:id="@+id/fecha"
+            android:text="@string/fecha_Actual"
+            android:gravity="center"
+            android:layout_below="@id/tv_DatosGlobales"
+            android:textSize="14sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
 
         <ImageView
             android:id="@+id/img_User"
@@ -66,7 +76,8 @@
             android:rowCount="2"
             android:columnCount="2"
             android:columnOrderPreserved="false"
-            android:alignmentMode="alignMargins">
+            android:alignmentMode="alignMargins"
+            >
 
             <androidx.cardview.widget.CardView 
             android:id="@+id/cv_Infectados"    
@@ -315,6 +326,7 @@
             android:text="@string/log_out"
             android:layout_marginTop="5dp"
             android:layout_width="match_parent"
+            android:layout_marginVertical="8dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:layout_height="@dimen/height_buttons"
             android:background="@drawable/border_redondeados"/>
