--- a/app/src/main/res/layout/dashboard_activity.xml
+++ b/app/src/main/res/layout/dashboard_activity.xml
@@ -14,9 +14,9 @@
 
     <RelativeLayout
         android:id="@+id/rly_ContenedorSecundario"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginLeft="35dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -43,6 +43,15 @@
             android:textStyle="bold"
             android:gravity="center"
             android:layout_below="@+id/tv_CorreoUsuario"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/fecha"
+            android:text="@string/fecha_Actual"
+            android:gravity="center"
+            android:layout_below="@id/tv_DatosGlobales"
+            android:textSize="14sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
