Finalizado: Auth,API,Dashboard(Modified),Validatios

--- a/app/src/main/res/layout/dashboard_activity.xml
+++ b/app/src/main/res/layout/dashboard_activity.xml
@@ -319,6 +319,7 @@
             android:textColor="#FFFFFF"
             android:id="@+id/btn_LogoOut"
             android:onClick="cerrarSesion"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:text="Log Out"
             android:layout_marginTop="5dp"
             android:layout_width="match_parent"
